src/components/TabView.css
.tab-view {
	margin: 0 calc(-1 * var(--spacing-primary));
}

.tab-view-list {
	list-style: none;
	padding: 0;
	margin: 0;
	overflow-x: scroll;
	display: flex;
	white-space: nowrap;
}

.tab-view-list > li {
	margin-right: 16px;
}

.tab-view-list > li:first-child {
	margin-left: var(--spacing-primary);
}

.tab-view-list > li:last-child {
	margin-right: var(--spacing-primary);
}

.tab-view-item-title,
.tab-view-item-description {
	overflow: hidden;
	text-overflow: ellipsis;
}

.tab-view-status .tab-view-item-title,
.tab-view-status .tab-view-item-description {
	width: min(50vw, 240px);
}

.tab-view-item-container {
	text-align: unset;
	border-radius: 8px;
	display: flex;
	padding: 11px 17px;
	gap: 12px;
}

.tab-view-status .tab-view-item-container {
	border: 1px solid var(--code-bg-color);
	background: var(--code-bg-color);
}

.tab-view-action .tab-view-item-container {
	border: 1px solid var(--border-color);
}

.tab-view-item-title-untitled {
	color: var(--secondary-text-color);
}

.tab-view-action .tab-view-item-container {
	cursor: pointer;
}

.tab-view-item-icon {
	width: 36px;
	height: 36px;
	display: flex;
	flex-direction: column;
}

.tab-view-item-icon svg {
	margin: 0 auto;
}

.tab-view-item-icon svg,
.tab-view-item-icon img {
	width: 100%;
	height: 100%;
	object-fit: cover;
	border-radius: 99px;
	flex: 1;
}

.tab-view-item-icon svg {
	background: var(--code-bg-color);
	color: var(--icon-color);
	padding: 8px;
	box-sizing: border-box;
}

.tab-view-item-content {
	flex: 1;
	display: flex;
	gap: 8px;
	flex-direction: column;
}

.tab-view-item-title,
.tab-view-item-status {
	line-height: 1;
	height: 1em;
}

.tab-view-item-title {
	font-weight: 500;
}

.tab-view-item-status {
	font-size: calc(1rem * 12 / 16);
	color: var(--secondary-text-color);
}

